# ChangeLog for app-misc/tracker
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/tracker/ChangeLog,v 1.156 2013/05/02 08:03:51 pacho Exp $

  02 May 2013; Pacho Ramos <pacho@gentoo.org> tracker-0.14.5.ebuild:
  Run eautoreconf also for 0.14 (#367975#c49)

*tracker-0.16.1 (01 May 2013)

  01 May 2013; Pacho Ramos <pacho@gentoo.org> +tracker-0.16.1.ebuild:
  Version bump

  28 Apr 2013; Pacho Ramos <pacho@gentoo.org> tracker-0.16.0.ebuild:
  Add an eautoreconf call to prevent compilation problems caused by upstream
  refusing to use upstream libtool and using patched Debian one instead
  (#367975)

  09 Apr 2013; Gilles Dartiguelongue <eva@gentoo.org> -tracker-0.14.4.ebuild,
  tracker-0.14.5.ebuild, tracker-0.16.0.ebuild, tracker-9999.ebuild:
  Clean up live bits from non-live ebuilds. Raise totem-pl-parser dependency,
  bug #461220. Use slotted libgrss. Clean up old revision.

  06 Apr 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  tracker-0.14.4.ebuild, tracker-0.14.5.ebuild, tracker-0.16.0.ebuild,
  tracker-9999.ebuild:
  Fix libpng dependencies in 0.14.x, alphabetize a few things in 0.16.0, and
  update live ebuild.

  05 Apr 2013; Pacho Ramos <pacho@gentoo.org> tracker-0.16.0.ebuild:
  Fix subslot dep on libpng

  30 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> tracker-0.14.4.ebuild,
  tracker-0.14.5.ebuild, tracker-0.16.0.ebuild, tracker-9999.ebuild:
  Set slot for gupnp-dlna.

*tracker-0.16.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +tracker-0.16.0.ebuild,
  metadata.xml:
  Version bump for Gnome 3.8

  28 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> tracker-0.14.4.ebuild,
  tracker-0.14.5.ebuild, tracker-9999.ebuild:
  Adjust sqlite dependency, bug #462388

  04 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -files/tracker-0.12.3-strigi.patch, -tracker-0.12.10-r1.ebuild,
  -files/tracker-0.14.2-icu-no-LC_ALL.patch, -tracker-0.14.3.ebuild,